# kagan-legacy

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ANALYTICS_TESTING_GUIDE.md  ANALYTICS_TESTS_SUMMARY.md  ANALYTICS_TEST_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLES.md  Makefile  README.md  SECURITY.md  alembic.ini  glama.json  history.md  mkdocs.local.yml  mkdocs.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  server.json  wrangler.jsonc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  socket.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/context/: README.md
.github/semantic-release/: .release_notes.md.j2  CHANGELOG.md.j2
.github/workflows/: auto-assign.yml  cd.yaml  ci.yml  mcp-registry.yml  post-release-update-test.yaml  prompt-eval.yml  publish-vscode.yaml  snyk.yml
.playwright-mcp/: page-2026-04-16T09-57-23-282Z.yml
config/: mkdocs.yml  server.json
design/: testing.md
docs/: CNAME  config.md  contributing.md  index.md  keybindings.md  llms.txt  mkdocs.yml  multi-repo-guide.md  quickstart.md  robots.txt  security.md  task-modes.md  ticket-modes.md  troubleshooting.md  user-guide.md  wrangler.jsonc
docs/api/: security.md
docs/concepts/: architecture-overview.md  gates.md  supervision-model.md  task-lifecycle.md
docs/getting-started/: commands.md  index.md  quickstart.md
docs/guides/: acp-session-lifecycle.md  analytics.md  build-your-first-plugin.md  chat.md  editor-mcp-setup.md  github-models.md  github-plugin-runbook.md  github-plugin.md  github.md  managed-vs-interactive.md  mcp-setup.md  modes-auto-vs-pair.md  multi-repo.md  plugin-ui-schema.md  remote-access.md  upgrades-and-reset.md  vscode-extension.md  web-dashboard.md
docs/how-to/: admin-mcp-editors.md  index.md  mcp-setup.md  multi-repo.md  task-modes.md
docs/internal/: ARCHITECTURE.md  ARCHITECTURE_REGEN_PROMPT.md  DESIGN.md  README.md  kagan2_reliability_patterns.md  testing-rationalization-matrix.md  testing.md  testing_rules.md
docs/javascripts/: layout.js
docs/overrides/: main.html
docs/reference/: architecture.md  cli.md  configuration.md  index.md  keybindings.md  mcp-tools.md  plugin-sdk.md  plugins.md
docs/styles/: kagan.css
docs/stylesheets/: extra.css
evals/: .gitignore  README.md  generate-prompts.sh  promptfooconfig.yaml  resolve_promptfoo_config.py
evals/tokens/: README.md  measure.py
registry/: persona_repo_whitelist.json
scripts/: check_added_large_files.py  check_complexity_budget.py  check_python_loc_budget.py  check_test_quality.py  check_wire_drift.py  find_dead_code.py  generate_wire_types.py
src/kagan/: __init__.py  __main__.py  ansi.py  app.py  atomic.py  bootstrap.py  builtin_agents.py  command_utils.py  config.py  constants.py  debug_log.py  git_utils.py  instance_lock.py  jsonrpc.py  keybindings.py  limits.py  mcp_naming.py  paths.py  preflight.py  runtime_env.py  terminal.py  theme.py  tmux.py  version.py  wezterm.py
tests/: README.md  __init__.py  conftest.py  strategies.py  test_auto_execution.py  test_client_runtime_compatibility.py  test_command_transport_truncation.py  test_database.py  test_docs_drift.py  test_domain_model_standardization.py  test_e2e_smoke.py  test_github_auto_pr_defaults.py  test_github_integration.py  test_interactions.py  test_kanban_task_authoring.py  test_lock.py  test_mcp_access_and_profiles.py  test_mcp_tools.py  test_models.py  test_onboarding_and_config.py  test_pair_session_handoff.py  test_planner.py  test_planner_models.py  test_plugin_command_routing.py  test_project_and_repo_management.py  test_prompt_loader.py  test_review_diff_merge.py  test_scalars_and_errors.py  test_scheduler.py  test_sdk_transport_client_stale.py  test_sessions.py  test_signals.py  test_snapshots.py  test_task_lifecycle_transitions.py  test_task_review_command_delegation.py  test_troubleshooting.py  test_ui.py  test_wait_helpers.py  test_worktree.py
tests/cli/: test_chat_oneshot_smoke.py  test_chat_sessions.py
tests/core/: conftest.py  test_agent_lifecycle_chat_notify.py  test_analytics.py  test_analytics_smoke.py  test_audit_cleanup.py  test_chat_attach_cli.py  test_chat_attachment.py  test_chat_engine_frames.py  test_chat_lifecycle.py  test_chat_sessions.py  test_chat_streaming.py  test_cli_surface.py  test_cli_update_bootstrap.py  test_client_lifecycle.py  test_db_migrations.py  test_fake_agent_emit_resume.py  test_general_sessions.py  test_orphan_reap_frames.py  test_pi_coding_agent_backend.py  test_projects_and_repos.py  test_reviews.py  test_running_agents_listing.py  test_send_to_attached_session.py  test_session_items.py  test_session_transition_notifies_chat.py  test_sessions_attached.py  test_sessions_auto.py  test_sessions_detached.py  test_sessions_pair.py  test_settings_and_audit.py  test_task_event_frames.py  test_task_lifecycle.py  test_tasks.py  test_workspaces.py
tests/e2e/: test_diff.py  test_help_modal.py  test_kanban.py  test_navigation.py  test_planner.py  test_rejection_input.py  test_smoke.py  test_streaming_widgets.py  test_ticket_details_actions.py  test_ticket_editor.py  test_ticket_operations.py  test_troubleshooting_install.py  test_welcome.py
tests/e2e_chat/: __init__.py  conftest.py
tests/e2e_tui/: README.md  __init__.py  conftest.py  test_k_cold_start_tui.py  test_l_task_lifecycle_tui.py  test_m_review_verdict_tui.py  test_n_workspace_tui.py  test_o_command_palette_tui.py  test_p_mention_autocomplete_tui.py  test_q_multi_task_tui.py  test_r_settings_persist_tui.py  test_s_diff_viewer_tui.py  test_t_interactive_launcher_tui.py
tests/features/: conftest.py  test_agent_automation.py  test_agent_installer_extended.py  (+24 more)
userstories/: ARCHITECTURE.md  epic-01-onboarding.md  epic-02-project-repo-management.md  epic-03-kanban-board.md  epic-04-task-lifecycle.md  epic-05-auto-execution.md  epic-06-pair-execution.md  epic-07-chat-cli.md  epic-08-review-diff-merge.md  epic-09-github-integration.md  epic-10-mcp-access.md  epic-11-cli-operations.md
(+1597 files in other folders)
